src/objects/Deal_Kit_Header__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Kit_Price__c</fullName>
        <label>Actual Kit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to CO Header</description>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Deal Kit Headers</relationshipLabel>
        <relationshipName>Deal_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Can_Split__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Can Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Required Field. A unique identifier for the Kit created by the user.</description>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to deal item</description>
        <label>Deal Item</label>
        <referenceTo>Deal_Item__c</referenceTo>
        <relationshipLabel>Deal Kit Headers</relationshipLabel>
        <relationshipName>Deal_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A general description of the kit.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The dollar value that the kit is fixed at.</description>
        <label>Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Kit_Header_CO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fixed Kit Header CO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Fixed Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Header</label>
        <referenceTo>Kit_Header__c</referenceTo>
        <relationshipLabel>Deal Kit Headers</relationshipLabel>
        <relationshipName>Deal_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Kit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box indicator to restrict the use of the kit to Service Sections only. It also controls the availability of the additional service-specific fields in the modal window or for display in the Info section when viewing a kit. By default this will be set to False.</description>
        <label>Service Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Unique identifier to map on UI.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier to map on UI.</inlineHelpText>
        <label>UUID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Deal Kit Header</label>
    <nameField>
        <displayFormat>DKH-{00000000}</displayFormat>
        <label>Deal Kit Header Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Kit Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>